# brain-games

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
brain_games/scripts/: brain_games.py
braingames/: cli.py  even.py
braingames/functions/: func.py
braingames/game_engine/: game_engine.py
braingames/games/: calc_game.py  even.py  even_game.py  gcd_game.py  prime.py  prime_game.py  progression_game.py
braingames/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
