[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "Brain games - first project on hexlet"
authors = ["emp7yhead <artyomkropp@gmail.com>"]
packages = [
	{ include = "braingames" },
]

[tool.poetry.scripts]
brain-games = "braingames.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
