[tool.poetry]
name = "hexlet-code"
version = "0.6.3"
description = "Brain games - first project on hexlet"
authors = ["emp7yhead <artyomkropp@gmail.com>"]
packages = [
	{ include = "braingames" },
]

[tool.poetry.scripts]
brain-games = "braingames.scripts.brain_games:main"
brain-even = "braingames.scripts.brain_even:main"
brain-calc = "braingames.scripts.brain_calc:main"
brain-gcd = "braingames.scripts.brain_gcd:main"
brain-progression = "braingames.scripts.brain_progression:main"
brain-prime = "braingames.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
