[tool.poetry]
name = "Brain games"
version = "0.7.3"
description = "Brain games include five games: brain even, brain calc, brain gcd, brain progression, brain prime"
authors = ["emp7yhead <artyomkropp@gmail.com>"]
repository = https://github.com/emp7yhead/python-project-lvl1.git
packages = [
	{ include = "braingames" },
]
classifiers = [
	"Development Status :: 4 - Beta"
	"Programming Language :: Python"
	"Topic :: Games/Entertainment"
]

[tool.poetry.scripts]
brain-games = "braingames.scripts.brain_games:main"
brain-even = "braingames.scripts.brain_even:main"
brain-calc = "braingames.scripts.brain_calc:main"
brain-gcd = "braingames.scripts.brain_gcd:main"
brain-progression = "braingames.scripts.brain_progression:main"
brain-prime = "braingames.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
